# scuec-auth

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
examples/flask/: app.py  requirements.txt
examples/flask/templates/: index.html
scuec_auth/: __init__.py  auth.py  utils.py
src/scuec_auth/: __init__.py  _compat.py  auth.py  session.py  utils.py
tests/: test_auth.py  test_compat.py  test_session.py  test_utils.py
