[metadata]
name = SCUECAuth
version = attr: src.scuec_auth.__version__

author = WengChaoxi
author_email = 352120190@qq.com

url = https://github.com/WengChaoxi/scuec-auth
license = MIT
description = The authentication module of SCUEC.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >=2.7
# Dependencies are in setup.py

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
